--- a/paper/references.bib
+++ b/paper/references.bib
@@ -162,3 +162,179 @@
   pages={10736},
   year={2019}
 }
+
+% Placeholder entries for missing citation keys (fill with full metadata later)
+@misc{miguel2023enhancing,
+  title={miguel2023enhancing (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2023}
+}
+
+@misc{renner2022computational,
+  title={renner2022computational (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{graham2022multi,
+  title={graham2022multi (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{bennett1992experimental,
+  title={bennett1992experimental (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={1992}
+}
+
+@misc{childs2018toward,
+  title={childs2018toward (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2018}
+}
+
+@misc{biamonte2017quantum,
+  title={biamonte2017quantum (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2017}
+}
+
+@misc{preskill2019quantum,
+  title={preskill2019quantum (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2019}
+}
+
+@misc{suzuki2022quantum,
+  title={suzuki2022quantum (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{10.1145/3771577,
+  title={10.1145/3771577 (placeholder)},
+  note={Placeholder entry for ScaleQsim reference},
+  year={2024}
+}
+
+@misc{park2022snuqs,
+  title={park2022snuqs (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{zhang2025bmqsim,
+  title={zhang2025bmqsim (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2025}
+}
+
+@misc{svsim,
+  title={svsim (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2020}
+}
+
+@misc{suzuki2021qulacs,
+  title={suzuki2021qulacs (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2021}
+}
+
+@misc{villalonga2019flexible,
+  title={villalonga2019flexible (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2019}
+}
+
+@misc{gray2018quimb,
+  title={gray2018quimb (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2018}
+}
+
+@misc{lykov2022tensor,
+  title={lykov2022tensor (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{guerreschi2020intel,
+  title={guerreschi2020intel (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2020}
+}
+
+@misc{de2007massively,
+  title={de2007massively (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2007}
+}
+
+@misc{nvidia2022jetson,
+  title={nvidia2022jetson (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{bayraktar2023cuquantum,
+  title={bayraktar2023cuquantum (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2023}
+}
+
+@misc{lin2022hm,
+  title={lin2022hm (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{hwang2020centaur,
+  title={hwang2020centaur (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2020}
+}
+
+@misc{zhang2021hyquas,
+  title={zhang2021hyquas (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2021}
+}
+
+@misc{xu2024atlas,
+  title={xu2024atlas (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2024}
+}
+
+@misc{zhang2022uniq,
+  title={zhang2022uniq (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{pan2022simulation,
+  title={pan2022simulation (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2022}
+}
+
+@misc{wang2023enabling,
+  title={wang2023enabling (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2023}
+}
+
+@misc{wu2019full,
+  title={wu2019full (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2019}
+}
+
+@misc{zhang2024overcoming,
+  title={zhang2024overcoming (placeholder)},
+  note={Placeholder entry — replace with full citation},
+  year={2024}
+}
+
